[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/InsanityCounter/HalfSanity_65px.png" type="Texture" id=1]
[ext_resource path="res://Assets/InsanityCounter/FullSanity_65px.png" type="Texture" id=2]
[ext_resource path="res://Player/SanityCounter.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/EmptySanity_65px.png-f1d456e05e222620bbab00b17e23b69e.stex"

[node name="SanityCounterUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SanityUIEmpty" type="TextureRect" parent="."]
margin_right = 390.0
margin_bottom = 65.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SanityUIFull" type="TextureRect" parent="."]
margin_right = 390.0
margin_bottom = 66.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SanityUIHalf" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
